--- a/_templates/page1.html
+++ b/_templates/page1.html
@@ -1,3 +1,3 @@
 <p>
-Here is a <a href="{{ mediapath }}/somefile.wav">media file</a>.
+Here is a <a href="{{ cfg['mediapath'] }}/sounds/cardinal/Jones2.wav">media file</a>.
 </p>
