Added support for guess the word to html converter

--- a/old_phonwork/exercises_html/Active_and_Passive_Articulators.html
+++ b/old_phonwork/exercises_html/Active_and_Passive_Articulators.html
@@ -1,4 +1,4 @@
-<!-- Title  --><title>Active and Passive Articulators<\/title
+<!-- Title  --><title>Active and Passive Articulators<\/title>
 <!-- IsRand 0 -->
 	<!-- Main -->
     <div id="main">
