--- a/old_phonwork/exercises_html/Arabic_pharyngealization.html
+++ b/old_phonwork/exercises_html/Arabic_pharyngealization.html
@@ -1,4 +1,4 @@
-<!-- Title  --><title>Arabic pharyngealization<\/title
+<!-- Title  --><title>Arabic pharyngealization<\/title>
 <!-- IsRand 0 -->
 	<!-- Main -->
     <div id="main">
