--- a/old_phonwork/exercises_html/Armenian_stops_and_affricates.html
+++ b/old_phonwork/exercises_html/Armenian_stops_and_affricates.html
@@ -1,4 +1,4 @@
-<!-- Title  --><title>Armenian stops and affricates<\/title
+<!-- Title  --><title>Armenian stops and affricates<\/title>
 <!-- IsRand 0 -->
 	<!-- Main -->
     <div id="main">
