--- a/old_phonwork/exercises_html/Backward_syllable_counting.html
+++ b/old_phonwork/exercises_html/Backward_syllable_counting.html
@@ -1,4 +1,4 @@
-<!-- Title  --><title>Backward syllable counting<\/title
+<!-- Title  --><title>Backward syllable counting<\/title>
 <!-- IsRand 0 -->
 	<!-- Main -->
     <div id="main">
