--- a/old_phonwork/exercises_html/Bells_visible_speech.html
+++ b/old_phonwork/exercises_html/Bells_visible_speech.html
@@ -1,4 +1,4 @@
-<!-- Title  --><title>Bell's visible speech<\/title
+<!-- Title  --><title>Bell's visible speech<\/title>
 <!-- IsRand 0 -->
 	<!-- Main -->
     <div id="main">
