--- a/old_phonwork/exercises_html/Bura_labialization.html
+++ b/old_phonwork/exercises_html/Bura_labialization.html
@@ -1,4 +1,4 @@
-<!-- Title  --><title>Bura labialization<\/title
+<!-- Title  --><title>Bura labialization<\/title>
 <!-- IsRand 0 -->
 	<!-- Main -->
     <div id="main">
