--- a/old_phonwork/exercises_html/Cantonese_Tones.html
+++ b/old_phonwork/exercises_html/Cantonese_Tones.html
@@ -1,4 +1,4 @@
-<!-- Title  --><title>Cantonese Tones<\/title
+<!-- Title  --><title>Cantonese Tones<\/title>
 <!-- IsRand 0 -->
 	<!-- Main -->
     <div id="main">
