--- a/old_phonwork/exercises_html/Changing_places.html
+++ b/old_phonwork/exercises_html/Changing_places.html
@@ -1,4 +1,4 @@
-<!-- Title  --><title>Changing places<\/title
+<!-- Title  --><title>Changing places<\/title>
 <!-- IsRand 0 -->
 	<!-- Main -->
     <div id="main">
