--- a/old_phonwork/exercises_html/Consonant_descriptions.html
+++ b/old_phonwork/exercises_html/Consonant_descriptions.html
@@ -1,4 +1,4 @@
-<!-- Title  --><title>Consonant descriptions<\/title
+<!-- Title  --><title>Consonant descriptions<\/title>
 <!-- IsRand 0 -->
 	<!-- Main -->
     <div id="main">
