--- a/old_phonwork/exercises_html/Formants_of_a.html
+++ b/old_phonwork/exercises_html/Formants_of_a.html
@@ -1,4 +1,4 @@
-<!-- Title  --><title>Formants of [a]<\/title
+<!-- Title  --><title>Formants of [a]<\/title>
 <!-- IsRand 0 -->
 	<!-- Main -->
     <div id="main">
