--- a/old_phonwork/exercises_html/French_semi_vowels.html
+++ b/old_phonwork/exercises_html/French_semi_vowels.html
@@ -1,4 +1,4 @@
-<!-- Title  --><title>French semi vowels<\/title
+<!-- Title  --><title>French semi vowels<\/title>
 <!-- IsRand 0 -->
 	<!-- Main -->
     <div id="main">
