--- a/old_phonwork/exercises_html/Hmong_tones.html
+++ b/old_phonwork/exercises_html/Hmong_tones.html
@@ -1,4 +1,4 @@
-<!-- Title  --><title>Hmong tones<\/title
+<!-- Title  --><title>Hmong tones<\/title>
 <!-- IsRand 0 -->
 	<!-- Main -->
     <div id="main">
