--- a/old_phonwork/exercises_html/IPA_for_airstream_mechanisms.html
+++ b/old_phonwork/exercises_html/IPA_for_airstream_mechanisms.html
@@ -1,4 +1,4 @@
-<!-- Title  --><title>IPA for airstream mechanisms<\/title
+<!-- Title  --><title>IPA for airstream mechanisms<\/title>
 <!-- IsRand 0 -->
 	<!-- Main -->
     <div id="main">
