--- a/old_phonwork/exercises_html/Ibibio_labio_velar_stops.html
+++ b/old_phonwork/exercises_html/Ibibio_labio_velar_stops.html
@@ -1,4 +1,4 @@
-<!-- Title  --><title>Ibibio labio-velar stops<\/title
+<!-- Title  --><title>Ibibio labio-velar stops<\/title>
 <!-- IsRand 0 -->
 	<!-- Main -->
     <div id="main">
