--- a/old_phonwork/exercises_html/Igbo_VOT_and_implosives.html
+++ b/old_phonwork/exercises_html/Igbo_VOT_and_implosives.html
@@ -1,4 +1,4 @@
-<!-- Title  --><title>Igbo VOT and implosives<\/title
+<!-- Title  --><title>Igbo VOT and implosives<\/title>
 <!-- IsRand 0 -->
 	<!-- Main -->
     <div id="main">
