--- a/old_phonwork/exercises_html/Infrahyoid_muscles.html
+++ b/old_phonwork/exercises_html/Infrahyoid_muscles.html
@@ -1,4 +1,4 @@
-<!-- Title  --><title>Infrahyoid muscles<\/title
+<!-- Title  --><title>Infrahyoid muscles<\/title>
 <!-- IsRand 0 -->
 	<!-- Main -->
     <div id="main">
