--- a/old_phonwork/exercises_html/Intrinsic_tongue_muscles_coronal.html
+++ b/old_phonwork/exercises_html/Intrinsic_tongue_muscles_coronal.html
@@ -1,4 +1,4 @@
-<!-- Title  --><title>Intrinsic tongue muscles - coronal<\/title
+<!-- Title  --><title>Intrinsic tongue muscles - coronal<\/title>
 <!-- IsRand 0 -->
 	<!-- Main -->
     <div id="main">
