--- a/old_phonwork/exercises_html/Korean_stops_and_s.html
+++ b/old_phonwork/exercises_html/Korean_stops_and_s.html
@@ -1,4 +1,4 @@
-<!-- Title  --><title>Korean stops and /s/<\/title
+<!-- Title  --><title>Korean stops and /s/<\/title>
 <!-- IsRand 0 -->
 	<!-- Main -->
     <div id="main">
