--- a/old_phonwork/exercises_html/MRI_images_of_voiceless_fricatives.html
+++ b/old_phonwork/exercises_html/MRI_images_of_voiceless_fricatives.html
@@ -1,4 +1,4 @@
-<!-- Title  --><title>MRI images of voiceless fricatives<\/title
+<!-- Title  --><title>MRI images of voiceless fricatives<\/title>
 <!-- IsRand 0 -->
 	<!-- Main -->
     <div id="main">
