--- a/old_phonwork/exercises_html/Mam_place_of_articulation.html
+++ b/old_phonwork/exercises_html/Mam_place_of_articulation.html
@@ -1,4 +1,4 @@
-<!-- Title  --><title>Mam place of articulation<\/title
+<!-- Title  --><title>Mam place of articulation<\/title>
 <!-- IsRand 0 -->
 	<!-- Main -->
     <div id="main">
