--- a/old_phonwork/exercises_html/Mandarin_Fricatives.html
+++ b/old_phonwork/exercises_html/Mandarin_Fricatives.html
@@ -1,4 +1,4 @@
-<!-- Title  --><title>Mandarin Fricatives<\/title
+<!-- Title  --><title>Mandarin Fricatives<\/title>
 <!-- IsRand 0 -->
 	<!-- Main -->
     <div id="main">
