--- a/old_phonwork/exercises_html/Mazatec_phonation.html
+++ b/old_phonwork/exercises_html/Mazatec_phonation.html
@@ -1,4 +1,4 @@
-<!-- Title  --><title>Mazatec phonation<\/title
+<!-- Title  --><title>Mazatec phonation<\/title>
 <!-- IsRand 0 -->
 	<!-- Main -->
     <div id="main">
