--- a/old_phonwork/exercises_html/Name_the_manner.html
+++ b/old_phonwork/exercises_html/Name_the_manner.html
@@ -1,4 +1,4 @@
-<!-- Title  --><title>Name the manner<\/title
+<!-- Title  --><title>Name the manner<\/title>
 <!-- IsRand 0 -->
 	<!-- Main -->
     <div id="main">
