--- a/old_phonwork/exercises_html/One_of_these_vowels.html
+++ b/old_phonwork/exercises_html/One_of_these_vowels.html
@@ -1,4 +1,4 @@
-<!-- Title  --><title>One of these vowels<\/title
+<!-- Title  --><title>One of these vowels<\/title>
 <!-- IsRand 0 -->
 	<!-- Main -->
     <div id="main">
