--- a/old_phonwork/exercises_html/Perturbation_theory.html
+++ b/old_phonwork/exercises_html/Perturbation_theory.html
@@ -1,4 +1,4 @@
-<!-- Title  --><title>Perturbation theory<\/title
+<!-- Title  --><title>Perturbation theory<\/title>
 <!-- IsRand 0 -->
 	<!-- Main -->
     <div id="main">
