--- a/old_phonwork/exercises_html/Place_Terms.html
+++ b/old_phonwork/exercises_html/Place_Terms.html
@@ -1,4 +1,4 @@
-<!-- Title  --><title>Place Terms<\/title
+<!-- Title  --><title>Place Terms<\/title>
 <!-- IsRand 0 -->
 	<!-- Main -->
     <div id="main">
