--- a/old_phonwork/exercises_html/Polish_Fricatives_transcription.html
+++ b/old_phonwork/exercises_html/Polish_Fricatives_transcription.html
@@ -1,4 +1,4 @@
-<!-- Title  --><title>Polish Fricatives - transcription<\/title
+<!-- Title  --><title>Polish Fricatives - transcription<\/title>
 <!-- IsRand 0 -->
 	<!-- Main -->
     <div id="main">
