--- a/old_phonwork/exercises_html/Quantity_in_Icelandic.html
+++ b/old_phonwork/exercises_html/Quantity_in_Icelandic.html
@@ -1,4 +1,4 @@
-<!-- Title  --><title>Quantity in Icelandic<\/title
+<!-- Title  --><title>Quantity in Icelandic<\/title>
 <!-- IsRand 0 -->
 	<!-- Main -->
     <div id="main">
