--- a/old_phonwork/exercises_html/Quantity_in_Italian.html
+++ b/old_phonwork/exercises_html/Quantity_in_Italian.html
@@ -1,4 +1,4 @@
-<!-- Title  --><title>Quantity in Italian<\/title
+<!-- Title  --><title>Quantity in Italian<\/title>
 <!-- IsRand 0 -->
 	<!-- Main -->
     <div id="main">
