--- a/old_phonwork/exercises_html/Review_of_vocal_tract_terms.html
+++ b/old_phonwork/exercises_html/Review_of_vocal_tract_terms.html
@@ -1,4 +1,4 @@
-<!-- Title  --><title>Review of vocal tract terms<\/title
+<!-- Title  --><title>Review of vocal tract terms<\/title>
 <!-- IsRand 0 -->
 	<!-- Main -->
     <div id="main">
