--- a/old_phonwork/exercises_html/Russian_palatalization.html
+++ b/old_phonwork/exercises_html/Russian_palatalization.html
@@ -1,4 +1,4 @@
-<!-- Title  --><title>Russian palatalization<\/title
+<!-- Title  --><title>Russian palatalization<\/title>
 <!-- IsRand 0 -->
 	<!-- Main -->
     <div id="main">
