--- a/old_phonwork/exercises_html/Sindhi_stops.html
+++ b/old_phonwork/exercises_html/Sindhi_stops.html
@@ -1,4 +1,4 @@
-<!-- Title  --><title>Sindhi stops<\/title
+<!-- Title  --><title>Sindhi stops<\/title>
 <!-- IsRand 0 -->
 	<!-- Main -->
     <div id="main">
