--- a/old_phonwork/exercises_html/Spectrogram_reading.html
+++ b/old_phonwork/exercises_html/Spectrogram_reading.html
@@ -1,4 +1,4 @@
-<!-- Title  --><title>Spectrogram reading<\/title
+<!-- Title  --><title>Spectrogram reading<\/title>
 <!-- IsRand 0 -->
 	<!-- Main -->
     <div id="main">
