--- a/old_phonwork/exercises_html/Terms_about_manner.html
+++ b/old_phonwork/exercises_html/Terms_about_manner.html
@@ -1,4 +1,4 @@
-<!-- Title  --><title>Terms about manner<\/title
+<!-- Title  --><title>Terms about manner<\/title>
 <!-- IsRand 0 -->
 	<!-- Main -->
     <div id="main">
