--- a/old_phonwork/exercises_html/Terms_for_sounds_English_2.html
+++ b/old_phonwork/exercises_html/Terms_for_sounds_English_2.html
@@ -1,4 +1,4 @@
-<!-- Title  --><title>Terms for sounds in English words - 2<\/title
+<!-- Title  --><title>Terms for sounds in English words - 2<\/title>
 <!-- IsRand 0 -->
 	<!-- Main -->
     <div id="main">
