--- a/old_phonwork/exercises_html/The_myoelestic_aerodynamic_theory.html
+++ b/old_phonwork/exercises_html/The_myoelestic_aerodynamic_theory.html
@@ -1,4 +1,4 @@
-<!-- Title  --><title>The myoelestic aerodynamic theory<\/title
+<!-- Title  --><title>The myoelestic aerodynamic theory<\/title>
 <!-- IsRand 0 -->
 	<!-- Main -->
     <div id="main">
