--- a/old_phonwork/exercises_html/Toda_rhotics.html
+++ b/old_phonwork/exercises_html/Toda_rhotics.html
@@ -1,4 +1,4 @@
-<!-- Title  --><title>Toda rhotics<\/title
+<!-- Title  --><title>Toda rhotics<\/title>
 <!-- IsRand 0 -->
 	<!-- Main -->
     <div id="main">
