--- a/old_phonwork/exercises_html/Tone_in_Ibibio.html
+++ b/old_phonwork/exercises_html/Tone_in_Ibibio.html
@@ -1,4 +1,4 @@
-<!-- Title  --><title>Tone in Ibibio<\/title
+<!-- Title  --><title>Tone in Ibibio<\/title>
 <!-- IsRand 0 -->
 	<!-- Main -->
     <div id="main">
