--- a/old_phonwork/exercises_html/Tone_in_Thai.html
+++ b/old_phonwork/exercises_html/Tone_in_Thai.html
@@ -1,4 +1,4 @@
-<!-- Title  --><title>Tone in Thai<\/title
+<!-- Title  --><title>Tone in Thai<\/title>
 <!-- IsRand 0 -->
 	<!-- Main -->
     <div id="main">
