--- a/old_phonwork/exercises_html/Transcription_implosives.html
+++ b/old_phonwork/exercises_html/Transcription_implosives.html
@@ -1,4 +1,4 @@
-<!-- Title  --><title>Transcription practice: implosives<\/title
+<!-- Title  --><title>Transcription practice: implosives<\/title>
 <!-- IsRand 0 -->
 	<!-- Main -->
     <div id="main">
