--- a/old_phonwork/exercises_html/Transcription_secondary_articulation.html
+++ b/old_phonwork/exercises_html/Transcription_secondary_articulation.html
@@ -1,4 +1,4 @@
-<!-- Title  --><title>Transcription - secondary articulation<\/title
+<!-- Title  --><title>Transcription - secondary articulation<\/title>
 <!-- IsRand 0 -->
 	<!-- Main -->
     <div id="main">
