--- a/old_phonwork/exercises_html/Using_aerodynamic_formulas.html
+++ b/old_phonwork/exercises_html/Using_aerodynamic_formulas.html
@@ -1,4 +1,4 @@
-<!-- Title  --><title>Using aerodynamic formulas<\/title
+<!-- Title  --><title>Using aerodynamic formulas<\/title>
 <!-- IsRand 0 -->
 	<!-- Main -->
     <div id="main">
