--- a/old_phonwork/exercises_html/Vocal_Tract_Resonance.html
+++ b/old_phonwork/exercises_html/Vocal_Tract_Resonance.html
@@ -1,4 +1,4 @@
-<!-- Title  --><title>Vocal Tract Resonance<\/title
+<!-- Title  --><title>Vocal Tract Resonance<\/title>
 <!-- IsRand 1 -->
 	<!-- Main -->
     <div id="main">
