--- a/old_phonwork/exercises_html/Vocal_tract_tour.html
+++ b/old_phonwork/exercises_html/Vocal_tract_tour.html
@@ -1,4 +1,4 @@
-<!-- Title  --><title>Vocal tract tour<\/title
+<!-- Title  --><title>Vocal tract tour<\/title>
 <!-- IsRand 0 -->
 	<!-- Main -->
     <div id="main">
