--- a/old_phonwork/exercises_html/Vowel_Muscles.html
+++ b/old_phonwork/exercises_html/Vowel_Muscles.html
@@ -1,4 +1,4 @@
-<!-- Title  --><title>Vowel Muscles<\/title
+<!-- Title  --><title>Vowel Muscles<\/title>
 <!-- IsRand 0 -->
 	<!-- Main -->
     <div id="main">
