--- a/old_phonwork/exercises_html/Zulu_clicks.html
+++ b/old_phonwork/exercises_html/Zulu_clicks.html
@@ -1,4 +1,4 @@
-<!-- Title  --><title>Zulu clicks<\/title
+<!-- Title  --><title>Zulu clicks<\/title>
 <!-- IsRand 0 -->
 	<!-- Main -->
     <div id="main">
