--- a/old_phonwork/exercises_html/basic_acoustics.html
+++ b/old_phonwork/exercises_html/basic_acoustics.html
@@ -1,4 +1,4 @@
-<!-- Title  --><title>basic acoustics<\/title
+<!-- Title  --><title>basic acoustics<\/title>
 <!-- IsRand 0 -->
 	<!-- Main -->
     <div id="main">
