--- a/old_phonwork/exercises_html/resonance_formulas.html
+++ b/old_phonwork/exercises_html/resonance_formulas.html
@@ -1,4 +1,4 @@
-<!-- Title  --><title>resonance formulas<\/title
+<!-- Title  --><title>resonance formulas<\/title>
 <!-- IsRand 0 -->
 	<!-- Main -->
     <div id="main">
