--- a/old_phonwork/exercises_html/Formants_in_an_i_model.html
+++ b/old_phonwork/exercises_html/Formants_in_an_i_model.html
@@ -1,4 +1,4 @@
-<!-- Title  --><title>Formants in an [i] model<\/title
+<!-- Title  --><title>Formants in an [i] model<\/title>
 <!-- IsRand 0 -->
 	<!-- Main -->
     <div id="main">
