--- a/old_phonwork/exercises_html/Formants_in_two_tube_models.html
+++ b/old_phonwork/exercises_html/Formants_in_two_tube_models.html
@@ -1,4 +1,4 @@
-<!-- Title  --><title>Formants in two-tube models<\/title
+<!-- Title  --><title>Formants in two-tube models<\/title>
 <!-- IsRand 0 -->
 	<!-- Main -->
     <div id="main">
