--- a/old_phonwork/exercises_html/Laryngeal_Anatomy.html
+++ b/old_phonwork/exercises_html/Laryngeal_Anatomy.html
@@ -1,4 +1,4 @@
-<!-- Title  --><title>Laryngeal Anatomy<\/title
+<!-- Title  --><title>Laryngeal Anatomy<\/title>
 <!-- IsRand 0 -->
 	<!-- Main -->
     <div id="main">
