--- a/old_phonwork/exercises_html/Secondary_Cardinal_Vowels.html
+++ b/old_phonwork/exercises_html/Secondary_Cardinal_Vowels.html
@@ -1,4 +1,4 @@
-<!-- Title  --><title>Secondary Cardinal Vowels<\/title
+<!-- Title  --><title>Secondary Cardinal Vowels<\/title>
 <!-- IsRand 0 -->
 	<!-- Main -->
     <div id="main">
