--- a/old_phonwork/exercises_html/ten_wasps_waveform.html
+++ b/old_phonwork/exercises_html/ten_wasps_waveform.html
@@ -1,4 +1,4 @@
-<!-- Title  --><title>ten wasps waveform<\/title
+<!-- Title  --><title>ten wasps waveform<\/title>
 <!-- IsRand 0 -->
 	<!-- Main -->
     <div id="main">
