--- a/_templates/_menu.html
+++ b/_templates/_menu.html
@@ -1,4 +1,4 @@
-    <nav id="menu">
+	<nav id="menu"><div class="inner">
       <h2>Menu</h2>
       <ul>
         <li><a href="index.php">Home</a></li>
@@ -16,5 +16,4 @@
         <li><a href="perception.php">12. Speech Perception</a></li>
         <li><a href="certs.php">Copies of certificates</a></li>
       </ul>
-    </nav>
-
+    </div><a class="close" href="#menu">Close</a></nav>
